# marpe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2026-02-15-markdown-preview-design.md  2026-02-15-markdown-preview-implementation.md  2026-02-15-review-fixes.md  2026-02-15-syntax-highlight-tls-design.md  2026-02-15-syntax-highlight-tls-implementation.md
src/: assets.rs  cli.rs  discovery.rs  handlers.rs  main.rs  render.rs  state.rs  tls.rs  watcher.rs
src/assets/: app.js  base.css  github.css  gitlab.css  shell.html
